--- a/app/app.html
+++ b/app/app.html
@@ -6,7 +6,7 @@
 
     <!-- Allow unsafe only for inline script tags, no external content-->
     <script nonce="1u1na">
-      if (process.env.NODE_ENV === 'Production') {
+      if (process.env.NODE_ENV === 'production') {
         document.write(
           `<meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline'; style-src 'self'; " >`
         );
